src/test/ui/consts/const-eval/panic-never-type.stderr
warning: any use of this value will cause an error
  --> $DIR/panic-never-type.rs:5:17
   |
LL | const VOID: ! = panic!();
   | ----------------^^^^^^^^-
   |                 |
   |                 the evaluated program panicked at 'explicit panic', $DIR/panic-never-type.rs:5:17
   |
note: lint level defined here
  --> $DIR/panic-never-type.rs:2:9
   |
LL | #![warn(const_err)]
   |         ^^^^^^^^^
   = note: this warning originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0080]: erroneous constant used
  --> $DIR/panic-never-type.rs:9:13
   |
LL |     let _ = VOID;
   |             ^^^^ referenced constant has errors

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
